--- a/app/src/main/res/layout/fragment_test_question_test.xml
+++ b/app/src/main/res/layout/fragment_test_question_test.xml
@@ -43,7 +43,7 @@
         android:id="@+id/question_test_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/test_question_test_back_button"
+        android:text="@string/test_back_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="20dp"
@@ -63,7 +63,7 @@
         android:id="@+id/question_test_next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/test_question_test_next_button"
+        android:text="@string/test_next_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="20dp"
