--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -8,7 +8,7 @@
     android:fitsSystemWindows="true">
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/setup_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
