--- a/app/src/main/res/layout/fragment_test_question_open.xml
+++ b/app/src/main/res/layout/fragment_test_question_open.xml
@@ -5,40 +5,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/question_number_label"
+        android:id="@+id/test_question_open_question_number_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/test_question_open_question_number"
+        android:text="@string/test_question_number"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/question_open_question_number_value"
+        app:layout_constraintRight_toLeftOf="@id/test_question_open_question_number_value"
         android:layout_marginTop="20dp"/>
 
     <TextView
-        android:id="@+id/question_open_question_number_value"
+        android:id="@+id/test_question_open_question_number_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/question_number_label"
+        app:layout_constraintLeft_toRightOf="@id/test_question_open_question_number_label"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="20dp"/>
 
     <TextView
-        android:id="@+id/question_open_text"
+        android:id="@+id/test_question_open_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/question_open_question_number_value"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintTop_toBottomOf="@id/test_question_open_question_number_value"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
 
     <EditText
-        android:id="@+id/question_open_answer"
+        android:id="@+id/test_question_open_answer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/question_open_text"
-        android:layout_marginTop="50dp"/>
+        app:layout_constraintTop_toBottomOf="@id/test_question_open_text"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
 
     <Button
-        android:id="@+id/question_open_back_button"
+        android:id="@+id/test_question_open_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/test_back_button"
@@ -48,17 +52,17 @@
         android:layout_marginBottom="20dp"/>
 
     <Button
-        android:id="@+id/question_open_section_button"
+        android:id="@+id/test_question_open_section_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/test_question_open_section_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/question_open_back_button"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="20dp"/>
 
     <Button
-        android:id="@+id/question_open_next_button"
+        android:id="@+id/test_question_open_next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/test_next_button"
