--- a/app/src/main/res/layout/fragment_setup_start.xml
+++ b/app/src/main/res/layout/fragment_setup_start.xml
@@ -21,6 +21,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/PrimaryButton"
         android:layout_marginBottom="100dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
