--- a/app/src/main/res/layout/fragment_test_question_open.xml
+++ b/app/src/main/res/layout/fragment_test_question_open.xml
@@ -48,6 +48,7 @@
         android:text="@string/test_back_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/PrimaryButton"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="20dp"/>
 
@@ -59,6 +60,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        style="@style/PrimaryButton"
         android:layout_marginBottom="20dp"/>
 
     <Button
@@ -68,6 +70,7 @@
         android:text="@string/test_next_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        style="@style/PrimaryButton"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="20dp"/>
 
