--- a/app/src/main/res/layout/fragment_test_result.xml
+++ b/app/src/main/res/layout/fragment_test_result.xml
@@ -69,6 +69,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/PrimaryButton"
         android:layout_marginBottom="30dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
