--- a/app/src/main/res/layout/fragment_test_section.xml
+++ b/app/src/main/res/layout/fragment_test_section.xml
@@ -20,6 +20,7 @@
         android:text="@string/test_back_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/PrimaryButton"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="20dp"/>
 
@@ -31,6 +32,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        style="@style/PrimaryButton"
         android:layout_marginBottom="20dp"/>
 
     <Button
@@ -40,6 +42,7 @@
         android:text="@string/test_next_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        style="@style/PrimaryButton"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="20dp"/>
 
