--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,8 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/maturita"
+        <item android:id="@+id/nav_menu_maturita"
             android:icon="@mipmap/ic_launcher"
             android:title="@string/nav_menu_maturita"/>
+        <item android:id="@+id/nav_menu_results"
+            android:icon="@mipmap/ic_launcher"
+            android:title="@string/nav_menu_results"/>
     </group>
 </menu>
