--- a/app/src/main/res/layout/fragment_load_placeholder.xml
+++ b/app/src/main/res/layout/fragment_load_placeholder.xml
@@ -4,22 +4,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/result_list_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@color/colorPrimary"/>
-
     <TextView
-        android:id="@+id/result_list_no_results"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/result_list_no_results"
-        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/data_load"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
