--- a/app/src/main/res/layout/fragment_setup_language.xml
+++ b/app/src/main/res/layout/fragment_setup_language.xml
@@ -5,46 +5,56 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/setup_language_selection_label"
+        android:id="@+id/setup_language_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/setup_selection_label"
+        android:text="@string/setup_language_title"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/setup_language_selection_value"
-        android:layout_marginTop="30dp"/>
+        app:layout_constraintRight_toRightOf="parent"
+        style="@style/SetupTitle"/>
 
-    <TextView
-        android:id="@+id/setup_language_selection_value"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/setup_language_selection_label"
+        android:background="@color/colorPrimaryDark"
+        android:minHeight="3dp"
+        android:maxHeight="3dp"
+        app:layout_constraintTop_toBottomOf="@id/setup_language_title"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="30dp"/>
-
-    <ImageButton
-        android:id="@+id/setup_language_slovak_button"
-        android:src="@drawable/flag_sk"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:scaleType="fitXY"
-        android:background="@android:color/transparent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/setup_language_czech_button"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
 
-    <ImageButton
-        android:id="@+id/setup_language_czech_button"
-        android:src="@drawable/flag_cs"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:scaleType="fitXY"
-        android:background="@android:color/transparent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="30dp"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/setup_language_title"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageButton
+            android:id="@+id/setup_language_slovak_button"
+            android:src="@drawable/flag_sk"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:scaleType="fitXY"
+            android:background="@android:color/transparent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/setup_language_czech_button"
+            android:layout_marginBottom="50dp"/>
+
+        <ImageButton
+            android:id="@+id/setup_language_czech_button"
+            android:src="@drawable/flag_cs"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:scaleType="fitXY"
+            android:background="@android:color/transparent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
