--- a/app/src/main/res/layout/fragment_setup_review.xml
+++ b/app/src/main/res/layout/fragment_setup_review.xml
@@ -5,23 +5,118 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/setup_review_selection_label"
+        android:id="@+id/setup_review_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/setup_selection_label"
+        android:text="@string/setup_review_title"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/setup_review_selection_value"
-        android:layout_marginTop="30dp"/>
+        app:layout_constraintRight_toRightOf="parent"
+        style="@style/SetupTitle"/>
 
-    <TextView
-        android:id="@+id/setup_review_selection_value"
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:minHeight="3dp"
+        android:maxHeight="3dp"
+        app:layout_constraintTop_toBottomOf="@id/setup_review_title"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/setup_review_selection_label"
+        app:layout_constraintTop_toBottomOf="@id/setup_review_title"
+        app:layout_constraintBottom_toTopOf="@id/setup_review_confirm_button"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp">
+
+        <TextView
+            android:id="@+id/setup_review_type_label"
+            android:text="@string/setup_review_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:textStyle="bold"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/setup_review_type_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/setup_review_type_label"
+            app:layout_constraintLeft_toLeftOf="@id/setup_review_language_value"
+            android:textStyle="bold"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/setup_review_language_label"
+            android:text="@string/setup_review_language"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/setup_review_type_label"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            android:textStyle="bold"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/setup_review_language_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/setup_review_language_label"
+            app:layout_constraintLeft_toRightOf="@id/setup_review_language_label"
+            android:layout_marginStart="32dp"
+            android:textStyle="bold"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/setup_review_subject_label"
+            android:text="@string/setup_review_subject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/setup_review_language_label"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            android:textStyle="bold"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/setup_review_subject_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/setup_review_subject_label"
+            app:layout_constraintLeft_toLeftOf="@id/setup_review_language_value"
+            android:textStyle="bold"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/setup_review_year_label"
+            android:text="@string/setup_review_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/setup_review_subject_label"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            android:textStyle="bold"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/setup_review_year_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/setup_review_year_label"
+            app:layout_constraintLeft_toLeftOf="@id/setup_review_language_value"
+            android:textStyle="bold"
+            android:textSize="18sp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/setup_review_confirm_button"
