--- a/app/src/main/res/layout/fragment_setup_start.xml
+++ b/app/src/main/res/layout/fragment_setup_start.xml
@@ -4,14 +4,18 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/setup_start_test_value"
+    <ImageView
+        android:id="@+id/setup_start_test_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxHeight="250dp"
+        android:minHeight="250dp"
+        android:maxWidth="250dp"
+        android:minWidth="250dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="200dp"/>
+        android:layout_marginTop="100dp"/>
 
     <Button
         android:id="@+id/setup_start_start_button"
