--- a/app/src/main/res/layout/fragment_setup_subject.xml
+++ b/app/src/main/res/layout/fragment_setup_subject.xml
@@ -5,35 +5,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/setup_subject_selection_label"
+        android:id="@+id/setup_subject_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/setup_selection_label"
+        android:text="@string/setup_subject_title"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/setup_subject_selection_value"
-        android:layout_marginTop="30dp"/>
-
-    <TextView
-        android:id="@+id/setup_subject_selection_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/setup_subject_selection_label"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="30dp"/>
+        style="@style/SetupTitle"/>
 
-    <ListView
-        android:id="@+id/setup_subject_subject_list"
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:minHeight="3dp"
+        android:maxHeight="3dp"
+        app:layout_constraintTop_toBottomOf="@id/setup_subject_title"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:foregroundGravity="center"/>
+        android:layout_marginEnd="8dp"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/setup_subject_title"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="90dp"
+        android:layout_marginBottom="30dp">
+
+        <ListView
+            android:id="@+id/setup_subject_subject_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:dividerHeight="2dp"
+            android:divider="@color/colorPrimary"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
