--- a/app/src/main/res/layout/fragment_test_question_open.xml
+++ b/app/src/main/res/layout/fragment_test_question_open.xml
@@ -5,32 +5,47 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/test_question_open_question_number_label"
+        android:id="@+id/test_question_open_section_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/test_question_number"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/test_question_open_question_number_value"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:textSize="16sp"/>
 
     <TextView
-        android:id="@+id/test_question_open_question_number_value"
+        android:id="@+id/test_question_open_question_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/test_question_open_question_number_label"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:textSize="16sp"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:minHeight="3dp"
+        android:maxHeight="3dp"
+        app:layout_constraintTop_toBottomOf="@id/test_question_open_question_label"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
 
     <TextView
         android:id="@+id/test_question_open_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/test_question_open_question_number_value"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"/>
+        app:layout_constraintTop_toBottomOf="@id/test_question_open_question_label"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
 
     <EditText
         android:id="@+id/test_question_open_answer"
@@ -38,8 +53,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/test_question_open_text"
         android:layout_marginTop="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:textSize="18sp"/>
 
     <Button
         android:id="@+id/test_question_open_back_button"
