--- a/app/src/main/res/layout/fragment_test_result.xml
+++ b/app/src/main/res/layout/fragment_test_result.xml
@@ -5,23 +5,55 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        android:id="@+id/test_result_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/test_result_title"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        style="@style/SetupTitle"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:minHeight="3dp"
+        android:maxHeight="3dp"
+        app:layout_constraintTop_toBottomOf="@id/test_result_title"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/test_result_title"
+        app:layout_constraintBottom_toTopOf="@id/test_result_finish_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp">
+
+    <TextView
         android:id="@+id/test_result_questions_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/test_question_number"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:text="@string/test_result_questions"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="100dp"
-        android:layout_marginStart="50dp"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/test_result_questions_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/test_result_questions_label"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="100dp"
-        android:layout_marginStart="20dp"/>
+        app:layout_constraintLeft_toLeftOf="@id/test_result_percentage_value"
+        app:layout_constraintTop_toTopOf="@id/test_result_questions_label"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/test_result_points_label"
@@ -30,17 +62,18 @@
         android:text="@string/test_result_points"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/test_result_questions_label"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="50dp"/>
+        android:layout_marginTop="8dp"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/test_result_points_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/test_result_points_label"
-        app:layout_constraintTop_toBottomOf="@id/test_result_questions_label"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"/>
+        app:layout_constraintLeft_toLeftOf="@id/test_result_percentage_value"
+        app:layout_constraintTop_toTopOf="@id/test_result_points_label"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/test_result_percentage_label"
@@ -49,17 +82,21 @@
         android:text="@string/test_result_percentage"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/test_result_points_label"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="50dp"/>
+        android:layout_marginTop="8dp"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/test_result_percentage_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/test_result_percentage_label"
-        app:layout_constraintTop_toBottomOf="@id/test_result_points_label"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"/>
+        app:layout_constraintTop_toTopOf="@id/test_result_percentage_label"
+        android:layout_marginStart="32dp"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/test_result_finish_button"
@@ -70,6 +107,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         style="@style/PrimaryButton"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="50dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
